Added courses for MS

--- a/index.html
+++ b/index.html
@@ -133,6 +133,16 @@
             <h3>M.S. Industrial &amp; Systems Engineering</h3>
             <span class="school">SUNY Binghamton</span>
             <span class="date">Aug 2024 – Dec 2025 · GPA: 3.62/4.00</span>
+            <ul class="courses-list">
+              <li>Modeling and Simulation</li>
+              <li>Operations Research</li>
+              <li>Engineering Project Management</li>
+              <li>Advanced Topics in Integrated Manufacturing</li>
+              <li>Computational Tools</li>
+              <li>Operations Management in Supply Chains</li>
+              <li>Enterprise Systems &amp; Engineering</li>
+              <li>Applied Probability &amp; Statistics</li>
+            </ul>
           </div>
           <div class="education-item">
             <h3>B.S. Mechanical Engineering</h3>
