1st Page improved

--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
       <div class="container hero-content">
         <h1>Aksh Patel</h1>
         <p class="subtitle">Industrial &amp; Manufacturing Engineer</p>
+        <p class="hero-tagline">Building efficient processes, data-driven systems, and next-gen manufacturing solutions powered by industrial engineering.</p>
         <div class="cta-buttons">
-          <a href="#projects" class="btn btn-primary">View Projects</a>
-          <a href="#contact" class="btn btn-secondary">Get in Touch</a>
+          <a href="#projects" class="btn btn-primary">Explore Projects</a>
+          <a href="#experience" class="btn btn-secondary">Professional Experience</a>
+          <a href="#contact" class="btn btn-outline">Get in Touch</a>
         </div>
       </div>
     </section>
@@ -44,16 +46,34 @@
     <section id="about" class="section fade-in delay-1">
       <div class="container">
         <h2>About Me</h2>
-        <p>
-          I am an Industrial and Manufacturing engineer focused on New Product
-          Introduction (NPI) and process optimization for SMT/PCBA
-          manufacturing. My expertise spans design of experiments, line
-          balancing, data‐driven decision making, discrete event simulation,
-          and real‑time dashboards. Passionate about technology and continuous
-          improvement, I bring hands‑on experience with leading engineering
-          tools and programming languages to deliver high‑quality products and
-          processes.
+        <p class="about-intro">
+          I am an Industrial and Manufacturing engineer focused on New Product Introduction (NPI) and process optimization for SMT/PCBA manufacturing. My work blends process engineering, data analysis, and cross-functional collaboration to bring robust, scalable manufacturing solutions to production.
         </p>
+
+        <div class="about-grid">
+          <div class="about-card">
+            <h3>Strengths</h3>
+            <ul>
+              <li>Process optimization &amp; continuous improvement</li>
+              <li>Discrete-event simulation &amp; capacity planning</li>
+              <li>Data analysis &amp; dashboarding (Python, Power BI)</li>
+              <li>Lean Six Sigma methodologies</li>
+              <li>AI hardware fundamentals: CPU, GPU, TPU, NPU architectures</li>
+              <li>Semiconductor &amp; electronics manufacturing process understanding</li>
+            </ul>
+          </div>
+
+          <div class="about-card">
+            <h3>Focus Areas</h3>
+            <ul>
+              <li>PCBA/SMT/PTH line performance &amp; quality</li>
+              <li>Advanced CPU/BGA process development</li>
+              <li>Industry 4.0 analytics &amp; automation</li>
+              <li>NPI process development &amp; cross-functional engineering</li>
+              <li>AI-driven manufacturing insights &amp; hardware-aware process optimization</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </section>
 
