--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <p class="subtitle">Industrial &amp; Manufacturing Engineer</p>
         <p class="hero-tagline">Building efficient processes, data-driven systems, and next-gen manufacturing solutions powered by industrial engineering.</p>
         <div class="cta-buttons">
-          <a href="#projects" class="btn btn-primary">Explore Projects</a>
-          <a href="#experience" class="btn btn-secondary">Professional Experience</a>
+          <a href="#experience" class="btn btn-primary">Professional Experience</a>
+          <a href="#projects" class="btn btn-secondary">Explore Projects</a>
           <a href="#contact" class="btn btn-outline">Get in Touch</a>
         </div>
       </div>
