PE & Education updated

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section id="home" class="hero fade-in delay-0">
       <div class="container hero-content">
         <h1>Aksh Patel</h1>
-        <p class="subtitle">Industrial &amp; Manufacturing Engineer</p>
+        <p class="subtitle">Industrial &amp; Manufacturing Process Engineer</p>
         <p class="hero-tagline">Building efficient processes, data-driven systems, and next-gen manufacturing solutions powered by industrial engineering.</p>
         <div class="cta-buttons">
           <a href="#experience" class="btn btn-primary">Professional Experience</a>
@@ -47,7 +47,7 @@
       <div class="container">
         <h2>About Me</h2>
         <p class="about-intro">
-          I am an Industrial and Manufacturing engineer focused on New Product Introduction (NPI) and process optimization for SMT/PCBA manufacturing. My work blends process engineering, data analysis, and cross-functional collaboration to bring robust, scalable manufacturing solutions to production.
+          I am an Industrial and Manufacturing Process Engineer specializing in NPI and high-reliability SMT/PCBA process development. I combine data analytics, simulation, hands-on high-tempo manufacturing experience, and a strong understanding of electronics and AI hardware to optimize processes, elevate yield performance, and scale complex products from prototype to high-volume production.
         </p>
 
         <div class="about-grid">
@@ -67,7 +67,7 @@
             <h3>Focus Areas</h3>
             <ul>
               <li>PCBA/SMT/PTH line performance &amp; quality</li>
-              <li>Advanced CPU/BGA process development</li>
+              <li>Advanced CPU/BGA process development for NPI</li>
               <li>Industry 4.0 analytics &amp; automation</li>
               <li>NPI process development &amp; cross-functional engineering</li>
               <li>AI-driven manufacturing insights &amp; hardware-aware process optimization</li>
@@ -148,26 +148,59 @@
     <section id="education" class="section fade-in delay-3">
       <div class="container">
         <h2>Education</h2>
-        <div class="education-list">
-          <div class="education-item">
-            <h3>M.S. Industrial &amp; Systems Engineering</h3>
-            <span class="school">SUNY Binghamton</span>
-            <span class="date">Aug 2024 – Dec 2025 · GPA: 3.62/4.00</span>
-            <ul class="courses-list">
-              <li>Modeling and Simulation</li>
-              <li>Operations Research</li>
-              <li>Engineering Project Management</li>
-              <li>Advanced Topics in Integrated Manufacturing</li>
-              <li>Computational Tools</li>
-              <li>Operations Management in Supply Chains</li>
-              <li>Enterprise Systems &amp; Engineering</li>
-              <li>Applied Probability &amp; Statistics</li>
-            </ul>
+        <div class="timeline">
+          <div class="timeline-entry">
+            <div class="timeline-dot"></div>
+            <div class="timeline-content">
+              <h3>M.S. Industrial &amp; Systems Engineering</h3>
+              <span class="company">SUNY Binghamton</span>
+              <span class="date">Aug 2024 – Dec 2025 · GPA: 3.62/4.00</span>
+              <ul>
+                <li>Applied Probability &amp; Statistics</li>
+                <li>Computational Tools</li>
+                <li>Enterprise Systems &amp; Engineering</li>
+                <li>Operations Research</li>
+                <li>Operations Management in Supply Chains</li>
+                <li>Engineering Project Management</li>
+                <li>Modeling &amp; Simulation</li>
+                <li>Advanced Topics in Integrated Manufacturing</li>
+              </ul>
+            </div>
           </div>
-          <div class="education-item">
-            <h3>B.S. Mechanical Engineering</h3>
-            <span class="school">Nirma University</span>
-            <span class="date">2020 – 2024 · GPA: 7.61/10.00</span>
+
+          <div class="timeline-entry">
+            <div class="timeline-dot"></div>
+            <div class="timeline-content">
+              <h3>B.S. Mechanical Engineering</h3>
+              <span class="company">Nirma University</span>
+              <span class="date">2020 – 2024 · GPA: 7.61/10.00</span>
+              <ul>
+                <li>Manufacturing Processes</li>
+                <li>Thermodynamics</li>
+                <li>Theory of machines</li>
+                <li>Mechanics of Solids</li>
+                <li>Machine Design</li>
+                <li>Automation and Control</li>
+                <li>Heat and Mass Transfer</li>
+                <li>Energy Systems</li>
+                <li>Manufacturing Technology and Management</li>
+                <li>Supply Chain Management</li>
+                <li>Operations Research</li>
+                <li>Metrology and Quality Control</li>
+                <li>Fluid Mechanics and Hydraulic Machines</li>
+                <li>Engineering Graphics</li>
+                <li>Computer Programming</li>
+                <li>Elements of Electrical and Electronic Engineering</li>
+                <li>Mechanical Workshop</li>
+                <li>Introduction to Computer Aided Drafting</li>
+                <li>Dynamics of Machines</li>
+                <li>Maintenance Engineering and Asset Management</li>
+                <li>Financial Management</li>
+                <li>Automobile Engineering</li>
+                <li>CNC Technology and Programming</li>
+                <li>Thermal Management of Electronic Systems</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
