--- a/index.html
+++ b/index.html
@@ -327,7 +327,10 @@
           <div class="skill-category">
             <h3>Certifications</h3>
             <ul>
-              <li>Lean Six Sigma Green Belt</li>
+              <li>Lean Six Sigma Green Belt — June 2025</li>
+              <li>IPC Certification — In Progress</li>
+              <li>DFM Certification — In Progress</li>
+              <li>CAD Certification — In Progress</li>
             </ul>
           </div>
           <div class="skill-category">
