--- a/index.html
+++ b/index.html
@@ -324,15 +324,7 @@
             </ul>
           </div>
           <!-- Separate certifications and professional skills into distinct categories -->
-          <div class="skill-category">
-            <h3>Certifications</h3>
-            <ul>
-              <li>Lean Six Sigma Green Belt — June 2025</li>
-              <li>IPC Certification — In Progress</li>
-              <li>DFM Certification — In Progress</li>
-              <li>CAD Certification — In Progress</li>
-            </ul>
-          </div>
+          <!-- Certifications moved to its own section per request -->
           <div class="skill-category">
             <h3>Professional Skills</h3>
             <ul>
@@ -344,8 +336,23 @@
       </div>
     </section>
 
+    <!-- Certifications Section -->
+    <section id="certifications" class="section fade-in delay-7">
+      <div class="container">
+        <h2>Certifications</h2>
+        <div class="certifications-list">
+          <ul>
+            <li>Lean Six Sigma Green Belt — June 2025</li>
+            <li>IPC Certification — In Progress</li>
+            <li>DFM Certification — In Progress</li>
+            <li>CAD Certification — In Progress</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
     <!-- Contact Section -->
-    <section id="contact" class="section fade-in delay-7">
+    <section id="contact" class="section fade-in delay-8">
       <div class="container">
         <h2>Contact</h2>
         <p class="contact-intro">
@@ -431,7 +438,7 @@
             LinkedIn
           </a>
           <!-- Instagram placeholder, update href with your Instagram link -->
-          <a href="#" target="_blank">
+          <a href="https://www.instagram.com/aksh.16.12?igsh=MTFmN213MzBzajVhZA%3D%3D&utm_source=qr" target="_blank">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 24 24"
