--- a/index.html
+++ b/index.html
@@ -212,42 +212,108 @@
         <h2>Projects</h2>
         <div class="projects-grid">
           <div class="project-card">
-            <img src="assets/project1.png" alt="Thesis Project" />
-            <h3>Advanced CPU BGA Process Development</h3>
+            <img src="assets/project1.png" alt="Advanced CPU BGA Process Development for NPI" />
+            <h3>Advanced CPU BGA Process Development for NPI</h3>
             <p>
-              Developed and optimized CPU BGA manufacturing processes for NPI.
-              Explored heatmap inspection, stencil optimization and
-              warpage mitigation frameworks.
+              Led end-to-end development of a predictive CPU BGA NPI process integrating warpage metrology, AXI heatmaps, stencil DOE, and reflow pallet optimization. Applied machine-learning correlations linking warpage signatures, solder-joint geometry, and reflow profiles. Enabled reliable, scalable CPU production with significantly reduced trial-and-error tuning.
             </p>
-            <a href="assets/thesis.pdf" class="link">View Thesis Document</a>
+            <a href="#" class="link">View Details</a>
           </div>
           <div class="project-card">
-            <img src="assets/project2.png" alt="Heatmap Simulator" />
-            <h3>CPU Solder Joint Heatmap Simulator</h3>
+            <img src="assets/project2.png" alt="CPU Solder-Joint Diameter Heatmap Inspection System" />
+            <h3>CPU Solder-Joint Diameter Heatmap Inspection System</h3>
             <p>
-              Created a Python‑based AI system to auto‑detect BGA solder
-              defects via heatmaps during reflow, ensuring reliability.
+              Developed a Python-based AXI heatmap analytics engine to detect CPU BGA solder-joint anomalies using Isolation-Forest and spatial clustering. Automated extraction of joint diameters, volumetric patterns, and warpage signatures to support predictive NPI decisions. Improved defect visibility and reduced scrap cost to zero.
             </p>
-            <a href="#" class="link">Run Simulator</a>
+            <a href="#" class="link">View Details</a>
           </div>
           <div class="project-card">
-            <img src="assets/project3.png" alt="Simulation Project" />
-            <h3>Discrete Event Production Simulator</h3>
+            <img src="assets/project3.png" alt="Downtime Tracking System" />
+            <h3>Downtime Tracking System</h3>
             <p>
-              Built a self‑made production line simulator using SimPy to model
-              SMT lines and maximize throughput and resource utilization.
+              Designed an end-to-end digital system using Google Forms, Sheets, automated pipelines, and Power BI to capture, classify, and escalate downtime events in real time. Implemented cross-department routing via Teams for faster resolution. Eliminated over 400 engineering hours of manual reporting annually.
             </p>
-            <a href="#" class="link">View Project</a>
+            <a href="#" class="link">View Details</a>
           </div>
           <div class="project-card">
-            <img src="assets/project4.png" alt="Solar Heater" />
-            <h3>Solar Air Heater Optimization</h3>
+            <img src="assets/project4.png" alt="OEE Dashboard" />
+            <h3>OEE Dashboard</h3>
             <p>
-              Optimized surface roughness and flow conditions to improve
-              thermohydraulic efficiency by over 13%, with experimental and
-              analytical methods.
+              Built a dynamic Power BI dashboard to track operator-wise and station-wise efficiency KPIs across SMT and assembly lines. Integrated real-time data streams to visualize throughput, cycle-time variation, and operator workload. Enhanced shift performance management and enabled proactive bottleneck mitigation.
             </p>
-            <a href="#" class="link">Read More</a>
+            <a href="#" class="link">View Details</a>
+          </div>
+          <div class="project-card">
+            <img src="assets/project5.png" alt="Engineering KPI Dashboard" />
+            <h3>Engineering KPI Dashboard</h3>
+            <p>
+              Created a comprehensive engineering dashboard covering process capability (Cp/CpK), FPY, scrap, rework, and downtime analytics. Unified multi-source data pipelines with automated refresh cycles for daily and weekly reporting. Empowered engineering leaders with actionable insights for continuous improvement.
+            </p>
+            <a href="#" class="link">View Details</a>
+          </div>
+          <div class="project-card">
+            <img src="assets/project6.png" alt="Line Health Report Dashboard" />
+            <h3>Line Health Report Dashboard</h3>
+            <p>
+              Developed a real-time Line Health dashboard consolidating equipment status, alarms, quality alerts, cycle-time deviations, and throughput KPIs. Provided a holistic view of line performance across shifts with predictive deviation indicators. Enabled early drift detection and strengthened manufacturing stability.
+            </p>
+            <a href="#" class="link">View Details</a>
+          </div>
+          <div class="project-card">
+            <img src="assets/project7.png" alt="Production Line Simulator" />
+            <h3>Production Line Simulator</h3>
+            <p>
+              Created a full-scale discrete-event simulation model replicating SMT/PCBA line behavior including feeders, reflow ovens, inspection gates, buffers, and operator interactions. Simulated throughput, takt time, bottlenecks, and WIP accumulation for capacity planning. Enabled informed decisions regarding staffing and layout redesign.
+            </p>
+            <a href="#" class="link">View Details</a>
+          </div>
+          <div class="project-card">
+            <img src="assets/project8.png" alt="Buffer Capacity Analyzer" />
+            <h3>Buffer Capacity Analyzer</h3>
+            <p>
+              Built a discrete-event simulation tool to evaluate optimal buffer sizes across SMT and assembly stations under varying cycle times and machine-failure conditions. Quantified WIP levels, blocking, and starvation effects to prevent throughput loss. Supported engineering teams in designing balanced, cost-effective buffer strategies.
+            </p>
+            <a href="#" class="link">View Details</a>
+          </div>
+          <div class="project-card">
+            <img src="assets/project9.png" alt="Consumables Dashboard" />
+            <h3>Consumables Dashboard</h3>
+            <p>
+              Designed an integrated dashboard to monitor the usage and consumption patterns of solder paste, flux, nozzles, stencils, and other SMT consumables. Automated forecasting and cost-per-unit analytics with long-term consumption trends. Reduced material wastage and improved procurement planning accuracy.
+            </p>
+            <a href="#" class="link">View Details</a>
+          </div>
+          <div class="project-card">
+            <img src="assets/project10.png" alt="Operator Training Validation & Headcount Tracking" />
+            <h3>Operator Training Validation & Headcount Tracking System</h3>
+            <p>
+              Designed a QR-code–based system to validate operator training, verify station qualifications, track attendance, and monitor headcount in real time. Synced training-matrix rules to prevent skill mismatches at stations. Improved traceability, reduced compliance risk, and enhanced production readiness across shifts.
+            </p>
+            <a href="#" class="link">View Details</a>
+          </div>
+          <div class="project-card">
+            <img src="assets/project11.png" alt="Squeegee Pressure & Speed Calculator" />
+            <h3>Squeegee Pressure & Speed Calculator</h3>
+            <p>
+              Developed a physics-based calculator to optimize stencil printing parameters such as squeegee pressure, print speed, and paste rheology. Enabled consistent solder paste deposition by guiding technicians toward correct process windows. Reduced print-related defects and improved volume uniformity for fine-pitch CPU BGAs.
+            </p>
+            <a href="#" class="link">View Details</a>
+          </div>
+          <div class="project-card">
+            <img src="assets/project12.png" alt="Advanced Solar Air Heater Thermal Optimization" />
+            <h3>Advanced Solar Air Heater Thermal Optimization</h3>
+            <p>
+              Experimentally optimized a solar air heater using engineered surface roughness geometries to enhance turbulence and heat transfer. Achieved 13.3% higher thermal performance and 7.0% improved thermo-hydraulic efficiency. Developed empirical models supporting renewable energy and HVAC system design.
+            </p>
+            <a href="#" class="link">View Details</a>
+          </div>
+          <div class="project-card">
+            <img src="assets/project13.png" alt="Reliability Enhancement of Multibranched Heat Pipe Cooling Systems" />
+            <h3>Reliability Enhancement of Multibranched Heat Pipe Cooling Systems</h3>
+            <p>
+              Investigated the influence of condenser cooling-water flow on dry-out and thermal stability in multi-branched heat pipe systems. Identified operating conditions that improved cooling efficiency by 1.6% and reduced thermal runaway risk. Provided insights for designing more reliable thermal management solutions for high-power electronics.
+            </p>
+            <a href="#" class="link">View Details</a>
           </div>
         </div>
       </div>
