button and links updated

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <p>
               Led end-to-end development of a predictive CPU BGA NPI process integrating warpage metrology, AXI heatmaps, stencil DOE, and reflow pallet optimization. Applied machine-learning correlations linking warpage signatures, solder-joint geometry, and reflow profiles. Enabled reliable, scalable CPU production with significantly reduced trial-and-error tuning.
             </p>
-            <a href="#" class="link">Open Thesis Document</a>
+            <a href="#home" class="link">Open Thesis Document (Available Soon)</a>
           </div>
           <div class="project-card">
             <img src="assets/project4.png" alt="CPU Solder-Joint Diameter Heatmap Inspection System" />
@@ -225,7 +225,7 @@
             <p>
               Developed a Python-based AXI heatmap analytics engine to detect CPU BGA solder-joint anomalies using Isolation-Forest and spatial clustering. Automated extraction of joint diameters, volumetric patterns, and warpage signatures to support predictive NPI decisions. Improved defect visibility and reduced scrap cost to zero.
             </p>
-            <a href="#" class="link">View Model</a>
+            <a href="#home" class="link">View Model (Available Soon)</a>
           </div>
           <div class="project-card">
             <img src="assets/project4.png" alt="Downtime Tracking System" />
@@ -233,7 +233,7 @@
             <p>
               Designed an end-to-end digital system using Google Forms, Sheets, automated pipelines, and Power BI to capture, classify, and escalate downtime events in real time. Implemented cross-department routing via Teams for faster resolution. Eliminated over 400 engineering hours of manual reporting annually.
             </p>
-            <a href="#" class="link">Explore System</a>
+            <a href="#home" class="link">Explore System (Available Soon)</a>
           </div>
           <div class="project-card">
             <img src="assets/project4.png" alt="OEE Dashboard" />
@@ -241,7 +241,7 @@
             <p>
               Built a dynamic Power BI dashboard to track operator-wise and station-wise efficiency KPIs across SMT and assembly lines. Integrated real-time data streams to visualize throughput, cycle-time variation, and operator workload. Enhanced shift performance management and enabled proactive bottleneck mitigation.
             </p>
-            <a href="#" class="link">Open Dashboard</a>
+            <a href="#home" class="link">Open Dashboard (Available Soon)</a>
           </div>
           <div class="project-card">
             <img src="assets/project4.png" alt="Engineering KPI Dashboard" />
@@ -249,7 +249,7 @@
             <p>
               Created a comprehensive engineering dashboard covering process capability (Cp/CpK), FPY, scrap, rework, and downtime analytics. Unified multi-source data pipelines with automated refresh cycles for daily and weekly reporting. Empowered engineering leaders with actionable insights for continuous improvement.
             </p>
-            <a href="#" class="link">Open Dashboard</a>
+            <a href="#home" class="link">Open Dashboard (Available Soon)</a>
           </div>
           <div class="project-card">
             <img src="assets/project4.png" alt="Line Health Report Dashboard" />
@@ -257,7 +257,7 @@
             <p>
               Developed a real-time Line Health dashboard consolidating equipment status, alarms, quality alerts, cycle-time deviations, and throughput KPIs. Provided a holistic view of line performance across shifts with predictive deviation indicators. Enabled early drift detection and strengthened manufacturing stability.
             </p>
-            <a href="#" class="link">Open Dashboard</a>
+            <a href="#home" class="link">Open Dashboard (Available Soon)</a>
           </div>
           <div class="project-card">
             <img src="assets/project4.png" alt="Production Line Simulator" />
@@ -265,7 +265,7 @@
             <p>
               Created a full-scale discrete-event simulation model replicating SMT/PCBA line behavior including feeders, reflow ovens, inspection gates, buffers, and operator interactions. Simulated throughput, takt time, bottlenecks, and WIP accumulation for capacity planning. Enabled informed decisions regarding staffing and layout redesign.
             </p>
-            <a href="#" class="link">Run Analysis</a>
+            <a href="#home" class="link">Run Analysis (Available Soon)</a>
           </div>
           <div class="project-card">
             <img src="assets/project4.png" alt="Buffer Capacity Analyzer" />
@@ -273,7 +273,7 @@
             <p>
               Built a discrete-event simulation tool to evaluate optimal buffer sizes across SMT and assembly stations under varying cycle times and machine-failure conditions. Quantified WIP levels, blocking, and starvation effects to prevent throughput loss. Supported engineering teams in designing balanced, cost-effective buffer strategies.
             </p>
-            <a href="#" class="link">Run Analysis</a>
+            <a href="#home" class="link">Run Analysis (Available Soon)</a>
           </div>
           <div class="project-card">
             <img src="assets/project4.png" alt="Consumables Dashboard" />
@@ -281,7 +281,7 @@
             <p>
               Designed an integrated dashboard to monitor the usage and consumption patterns of solder paste, flux, nozzles, stencils, and other SMT consumables. Automated forecasting and cost-per-unit analytics with long-term consumption trends. Reduced material wastage and improved procurement planning accuracy.
             </p>
-            <a href="#" class="link">View Details</a>
+            <a href="#home" class="link">View Details (Available Soon)</a>
           </div>
           <div class="project-card">
             <img src="assets/project4.png" alt="Operator Training Validation & Headcount Tracking" />
@@ -289,7 +289,7 @@
             <p>
               Designed a QR-code–based system to validate operator training, verify station qualifications, track attendance, and monitor headcount in real time. Synced training-matrix rules to prevent skill mismatches at stations. Improved traceability, reduced compliance risk, and enhanced production readiness across shifts.
             </p>
-            <a href="#" class="link">Explore Insights</a>
+            <a href="#home" class="link">Explore Insights (Available Soon)</a>
           </div>
           <div class="project-card">
             <img src="assets/project4.png" alt="Squeegee Pressure & Speed Calculator" />
@@ -297,7 +297,7 @@
             <p>
               Developed a physics-based calculator to optimize stencil printing parameters such as squeegee pressure, print speed, and paste rheology. Enabled consistent solder paste deposition by guiding technicians toward correct process windows. Reduced print-related defects and improved volume uniformity for fine-pitch CPU BGAs.
             </p>
-            <a href="#" class="link">Launch Tool</a>
+            <a href="#home" class="link">Launch Tool (Available Soon)</a>
           </div>
           <div class="project-card">
             <img src="assets/project4.png" alt="Advanced Solar Air Heater Thermal Optimization" />
@@ -305,7 +305,7 @@
             <p>
               Experimentally optimized a solar air heater using engineered surface roughness geometries to enhance turbulence and heat transfer. Achieved 13.3% higher thermal performance and 7.0% improved thermo-hydraulic efficiency. Developed empirical models supporting renewable energy and HVAC system design.
             </p>
-            <a href="#" class="link">View Details</a>
+            <a href="#home" class="link">View Details (Available Soon)</a>
           </div>
           <div class="project-card">
             <img src="assets/project4.png" alt="Reliability Enhancement of Multibranched Heat Pipe Cooling Systems" />
@@ -313,7 +313,7 @@
             <p>
               Investigated the influence of condenser cooling-water flow on dry-out and thermal stability in multi-branched heat pipe systems. Identified operating conditions that improved cooling efficiency by 1.6% and reduced thermal runaway risk. Provided insights for designing more reliable thermal management solutions for high-power electronics.
             </p>
-            <a href="#" class="link">View Details</a>
+            <a href="#home" class="link">View Details (Available Soon)</a>
           </div>
         </div>
       </div>
@@ -328,7 +328,7 @@
             <strong>Development of a Heatmap Inspection System to Identify
               Warpage‑Induced Defects.</strong>
             SMTA&nbsp;International Conference, 2025.
-            <a href="assets/conference-paper.pdf" class="paper-btn" target="_blank">View Paper</a>
+            <a href="#home" class="paper-btn">View Paper (Available Soon)</a>
           </li>
         </ul>
       </div>
