--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <h2>Projects</h2>
         <div class="projects-grid">
           <div class="project-card">
-            <img src="assets/project4.png" alt="Advanced CPU BGA Process Development for NPI - M.S. Thesis" />
+            <img src="assets/ACBPDNPI.png" alt="Advanced CPU BGA Process Development for NPI - M.S. Thesis" />
             <h3>Advanced CPU BGA Process Development for NPI</h3>
             <p>
               Led end-to-end development of a predictive CPU BGA NPI process integrating warpage metrology, AXI heatmaps, stencil DOE, and reflow pallet optimization. Applied machine-learning correlations linking warpage signatures, solder-joint geometry, and reflow profiles. Enabled reliable, scalable CPU production with significantly reduced trial-and-error tuning.
@@ -220,7 +220,7 @@
             <a href="#home" class="link">Open Thesis Document (Available Soon)</a>
           </div>
           <div class="project-card">
-            <img src="assets/project4.png" alt="CPU Solder-Joint Diameter Heatmap Inspection System" />
+            <img src="assets/CHIS.png" alt="CPU Solder-Joint Diameter Heatmap Inspection System" />
             <h3>CPU Solder-Joint Diameter Heatmap Inspection System</h3>
             <p>
               Developed a Python-based AXI heatmap analytics engine to detect CPU BGA solder-joint anomalies using Isolation-Forest and spatial clustering. Automated extraction of joint diameters, volumetric patterns, and warpage signatures to support predictive NPI decisions. Improved defect visibility and reduced scrap cost to zero.
@@ -228,7 +228,7 @@
             <a href="#home" class="link">View Model (Available Soon)</a>
           </div>
           <div class="project-card">
-            <img src="assets/project4.png" alt="Downtime Tracking System" />
+            <img src="assets/DT.png" alt="Downtime Tracking System" />
             <h3>Downtime Tracking System</h3>
             <p>
               Designed an end-to-end digital system using Google Forms, Sheets, automated pipelines, and Power BI to capture, classify, and escalate downtime events in real time. Implemented cross-department routing via Teams for faster resolution. Eliminated over 400 engineering hours of manual reporting annually.
@@ -236,7 +236,7 @@
             <a href="#home" class="link">Explore System (Available Soon)</a>
           </div>
           <div class="project-card">
-            <img src="assets/project4.png" alt="OEE Dashboard" />
+            <img src="assets/OLE.png" alt="OEE Dashboard" />
             <h3>OEE Dashboard</h3>
             <p>
               Built a dynamic Power BI dashboard to track operator-wise and station-wise efficiency KPIs across SMT and assembly lines. Integrated real-time data streams to visualize throughput, cycle-time variation, and operator workload. Enhanced shift performance management and enabled proactive bottleneck mitigation.
@@ -244,7 +244,7 @@
             <a href="#home" class="link">Open Dashboard (Available Soon)</a>
           </div>
           <div class="project-card">
-            <img src="assets/project4.png" alt="Engineering KPI Dashboard" />
+            <img src="assets/EK.png" alt="Engineering KPI Dashboard" />
             <h3>Engineering KPI Dashboard</h3>
             <p>
               Created a comprehensive engineering dashboard covering process capability (Cp/CpK), FPY, scrap, rework, and downtime analytics. Unified multi-source data pipelines with automated refresh cycles for daily and weekly reporting. Empowered engineering leaders with actionable insights for continuous improvement.
@@ -252,7 +252,7 @@
             <a href="#home" class="link">Open Dashboard (Available Soon)</a>
           </div>
           <div class="project-card">
-            <img src="assets/project4.png" alt="Line Health Report Dashboard" />
+            <img src="assets/LHR.png" alt="Line Health Report Dashboard" />
             <h3>Line Health Report Dashboard</h3>
             <p>
               Developed a real-time Line Health dashboard consolidating equipment status, alarms, quality alerts, cycle-time deviations, and throughput KPIs. Provided a holistic view of line performance across shifts with predictive deviation indicators. Enabled early drift detection and strengthened manufacturing stability.
@@ -260,7 +260,7 @@
             <a href="#home" class="link">Open Dashboard (Available Soon)</a>
           </div>
           <div class="project-card">
-            <img src="assets/project4.png" alt="Production Line Simulator" />
+            <img src="assets/PLS.png" alt="Production Line Simulator" />
             <h3>Production Line Simulator</h3>
             <p>
               Created a full-scale discrete-event simulation model replicating SMT/PCBA line behavior including feeders, reflow ovens, inspection gates, buffers, and operator interactions. Simulated throughput, takt time, bottlenecks, and WIP accumulation for capacity planning. Enabled informed decisions regarding staffing and layout redesign.
@@ -268,7 +268,7 @@
             <a href="#home" class="link">Run Analysis (Available Soon)</a>
           </div>
           <div class="project-card">
-            <img src="assets/project4.png" alt="Buffer Capacity Analyzer" />
+            <img src="assets/BCS.png" alt="Buffer Capacity Analyzer" />
             <h3>Buffer Capacity Analyzer</h3>
             <p>
               Built a discrete-event simulation tool to evaluate optimal buffer sizes across SMT and assembly stations under varying cycle times and machine-failure conditions. Quantified WIP levels, blocking, and starvation effects to prevent throughput loss. Supported engineering teams in designing balanced, cost-effective buffer strategies.
@@ -276,7 +276,7 @@
             <a href="#home" class="link">Run Analysis (Available Soon)</a>
           </div>
           <div class="project-card">
-            <img src="assets/project4.png" alt="Consumables Dashboard" />
+            <img src="assets/C.png" alt="Consumables Dashboard" />
             <h3>Consumables Dashboard</h3>
             <p>
               Designed an integrated dashboard to monitor the usage and consumption patterns of solder paste, flux, nozzles, stencils, and other SMT consumables. Automated forecasting and cost-per-unit analytics with long-term consumption trends. Reduced material wastage and improved procurement planning accuracy.
