description change for OEE

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             <img src="assets/OLE.png" alt="OEE Dashboard" />
             <h3>OEE Dashboard</h3>
             <p>
-              Built a dynamic Power BI dashboard to track operator-wise and station-wise efficiency KPIs across SMT and assembly lines. Integrated real-time data streams to visualize throughput, cycle-time variation, and operator workload. Enhanced shift performance management and enabled proactive bottleneck mitigation.
+              Built a dynamic Power BI dashboard consolidating availability, performance, and quality metrics for SMT and assembly lines. Integrated live data streams to visualize machine utilization and operator productivity. Enabled leadership to track bottlenecks, losses, and improvement opportunities in real time.
             </p>
             <a href="#home" class="link">Open Dashboard (Available Soon)</a>
           </div>
@@ -247,7 +247,7 @@
             <img src="assets/EK.png" alt="Engineering KPI Dashboard" />
             <h3>Engineering KPI Dashboard</h3>
             <p>
-              Created a comprehensive engineering dashboard covering process capability (Cp/CpK), FPY, scrap, rework, and downtime analytics. Unified multi-source data pipelines with automated refresh cycles for daily and weekly reporting. Empowered engineering leaders with actionable insights for continuous improvement.
+              Created a comprehensive engineering dashboard covering OEE, FPY, rework, scrap rate, DPMO, cycle time, space utilization, pick and place attrition, inspection false calls, production and downtime analytics. Unified multi-source data pipelines with automated refresh cycles for daily and weekly reporting. Empowered engineering leaders with actionable insights for continuous improvement.
             </p>
             <a href="#home" class="link">Open Dashboard (Available Soon)</a>
           </div>
