image added new

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             <a href="#home" class="link">View Details (Available Soon)</a>
           </div>
           <div class="project-card">
-            <img src="assets/project4.png" alt="Operator Training Validation & Headcount Tracking" />
+            <img src="assets/OAS.jpeg" alt="Operator Training Validation & Headcount Tracking" />
             <h3>Operator Training Validation & Headcount Tracking System</h3>
             <p>
               Designed a QR-code–based system to validate operator training, verify station qualifications, track attendance, and monitor headcount in real time. Synced training-matrix rules to prevent skill mismatches at stations. Improved traceability, reduced compliance risk, and enhanced production readiness across shifts.
@@ -292,7 +292,7 @@
             <a href="#home" class="link">Explore Insights (Available Soon)</a>
           </div>
           <div class="project-card">
-            <img src="assets/project4.png" alt="Squeegee Pressure & Speed Calculator" />
+            <img src="assets/SPSC.png" alt="Squeegee Pressure & Speed Calculator" />
             <h3>Squeegee Pressure & Speed Calculator</h3>
             <p>
               Developed a physics-based calculator to optimize stencil printing parameters such as squeegee pressure, print speed, and paste rheology. Enabled consistent solder paste deposition by guiding technicians toward correct process windows. Reduced print-related defects and improved volume uniformity for fine-pitch CPU BGAs.
