image was not showing

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <a href="#home" class="link">Open Dashboard (Available Soon)</a>
           </div>
           <div class="project-card">
-            <img src="assets/PLS.png" alt="Production Line Simulator" />
+            <img src="assets/PLS.jpg" alt="Production Line Simulator" />
             <h3>Production Line Simulator</h3>
             <p>
               Created a full-scale discrete-event simulation model replicating SMT/PCBA line behavior including feeders, reflow ovens, inspection gates, buffers, and operator interactions. Simulated throughput, takt time, bottlenecks, and WIP accumulation for capacity planning. Enabled informed decisions regarding staffing and layout redesign.
@@ -268,7 +268,7 @@
             <a href="#home" class="link">Run Analysis (Available Soon)</a>
           </div>
           <div class="project-card">
-            <img src="assets/BCS.png" alt="Buffer Capacity Analyzer" />
+            <img src="assets/BCS.webp" alt="Buffer Capacity Analyzer" />
             <h3>Buffer Capacity Analyzer</h3>
             <p>
               Built a discrete-event simulation tool to evaluate optimal buffer sizes across SMT and assembly stations under varying cycle times and machine-failure conditions. Quantified WIP levels, blocking, and starvation effects to prevent throughput loss. Supported engineering teams in designing balanced, cost-effective buffer strategies.
@@ -292,7 +292,7 @@
             <a href="#home" class="link">Explore Insights (Available Soon)</a>
           </div>
           <div class="project-card">
-            <img src="assets/SPSC.png" alt="Squeegee Pressure & Speed Calculator" />
+            <img src="assets/SPSC.jpeg" alt="Squeegee Pressure & Speed Calculator" />
             <h3>Squeegee Pressure & Speed Calculator</h3>
             <p>
               Developed a physics-based calculator to optimize stencil printing parameters such as squeegee pressure, print speed, and paste rheology. Enabled consistent solder paste deposition by guiding technicians toward correct process windows. Reduced print-related defects and improved volume uniformity for fine-pitch CPU BGAs.
